# rocket-demo

./: Cargo.toml  README.md  schema.graphql
db/: docker-compose.yaml
db/initdb/: schema.sql
src/: main.rs
