[package]
name = "rocket-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
rocket = "0.5.0-rc.1"
async-graphql = "3.0.23"
async-graphql-rocket = "3"
sqlx = {version = "0.5", features = ["postgres", 'runtime-tokio-rustls', "chrono"]}
chrono = "0.4"
